# a-lang

./: .gitignore  README.md  pyproject.toml
src/a_lang/: __init__.py  __main__.py
