[project]
name = "a-lang"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Tomperez98", email = "tomasperezalvarez@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
"a-lang" = "a_lang:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.10.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/a_lang"]

[tool.rye.scripts]
check-types = "dmypy run --timeout 60 -- src tests"
new-release = "python scripts/new-release.py"